# claude-mpm

./: .claude.json  .flake8  .gitignore  .mcp.json  .npmignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  .secrets.baseline  .trackdown.yaml  ACTIVITY_DASHBOARD_IMPLEMENTATION.md  ACTIVITY_SESSION_DATA_FIX.md  ACTIVITY_TAB_FIX_SUMMARY.md  ACTIVITY_TAB_TESTING_COMPLETE.md  ACTIVITY_TREE_FIX.md  AGENTS_TOOLS_FILES_FIX.md  AGENT_DEPLOYMENT_FIX_SUMMARY.md  AGENT_MANAGER_UPDATE_SUMMARY.md  AGENT_SKILLS_CHANGES_SUMMARY.md  AGENT_SKILLS_REPORT.md  AGENT_VERSION_BUMP_REPORT.md  ANALYTICAL_PRINCIPLES_INTEGRATION.md  AUTOPAUSE_INTEGRATION.md  BROWSER_LOGS_NUCLEAR_FIX.md  BUILD_TRACKING.md  CHANGELOG.md  CIRCULAR_IMPORT_FIX_SUMMARY.md  CLAUDE.md  CLAUDE_TREE_FIX.md  CLAUDE_TREE_FIX_FINAL.md  CODE_REVIEW_ACTION_PLAN.md  CONTRIBUTING.md  CRITICAL_BUGS.md  CRITICAL_FIXES_SUMMARY.md  DASHBOARD_ARCHITECTURE_ANALYSIS.md  DASHBOARD_COMPREHENSIVE_QA_REPORT.md  DASHBOARD_FILE_VIEWER_FIX.md  DASHBOARD_FIXES_SUMMARY.md  DASHBOARD_FIX_SUMMARY.md  DELETION_TEST_RESULTS.md  (+152 more)
.ai-trackdown/: config.yaml  project.yaml
.aitrackdown/: sync.json
.claude/: .claude.json  .claude.json.backup  settings.json  settings.local.json
.claude-mpm/: configuration.yaml
.claude-mpm/agents/: custom_engineer.md  malformed_agent.md  (+1 more)
.cursor/: mcp.json
.deepeval/: .deepeval_telemetry.txt
.githooks/: pre-commit  pre-push  sensitive-patterns
.github/: CODEOWNERS  dependabot.yml
agent_metadata_backup/: agent-manager.md  engineer.md  react_engineer.md
ai-code-review-docs/: quick-fixes-review-current-dir-openrouter-google-gemini-2-5-pro-2025-08-14T19-42-46-901Z.md  quick-fixes-review-current-dir-openrouter-google-gemini-2-5-pro-2025-08-14T20-01-05-218Z.md  quick-fixes-review-current-dir-openrouter-google-gemini-2-5-pro-2025-08-14T20-23-33-525Z.md
config/: experimental_features.json.example  mcp_gateway.yaml.example  skills_sources.yaml
docker/: Dockerfile.clean-install
docs/: AGENTS.md  AGENTS_MANAGE_REDIRECT.md  AGENT_DEPLOYMENT_TEST_GAPS.md  AGENT_EXCLUSION.md  AGENT_LOADER_FIX_VERIFICATION.md  AGENT_NAME_CONSISTENCY_TEST_RESULTS.md  AGENT_NAME_FORMATS.md  AGENT_REGISTRY_CACHING.md  AGENT_SCHEMA_GUIDE.md  AGENT_SCHEMA_SUMMARY.md  AITRACKDOWN_CORRECT_FIX.md  AITRACKDOWN_FIX.md  API.md  ARCHITECTURE.md  BASE_AGENT_LOADING_FIX.md  BUILD_TRACKING.md  CLAUDE_ENHANCED_EXAMPLE.md  COMMANDER_VISION.md  CONFIG_EDITOR_UPDATE.md  CONFIG_SINGLETON_FIX.md  DASHBOARD_CONSOLIDATION_PLAN.md  DASHBOARD_FIXES_SUMMARY.md  DASHBOARD_HTTP_SOLUTION.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_OPERATIONS.md  DEVELOPMENT.md  DEVELOPMENT_SETUP.md  DOCUMENTATION-STANDARDS.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_STATUS.md  DYNAMIC_AGENT_CAPABILITIES_IMPLEMENTATION.md  FILESYSTEM_SECURITY_ARCHITECTURE.md  FIX_DUPLICATE_CONTINUE.md  FIX_NO_AUTO_INSTRUCTIONS_DEPLOY.md  FIX_OUTPUT_STYLE_STARTUP.md  FIX_RESUME_FLAG.md  FIX_RESUME_FLAG_PASSTHROUGH.md  GITHUB_MULTI_ACCOUNT_SETUP.md  HEALTH_MONITORING_IMPLEMENTATION_SUMMARY.md  (+147 more)
examples/: claude_mpm_custom_instructions.py  clone_detector_demo.py  commander_chat_demo.py  commander_daemon_demo.py  commander_demo.py  commander_full_demo.py  commander_parser_demo.py  configuration-simplified.yaml  context_usage_tracker_example.py  delegation_hook_demo.py  dependency_injection_demo.py  env-manager-workflows.md  exception_usage.py  incremental_pause_usage.py  instruction_reinforcement_demo.py  json_rpc_hooks_demo.py  logging_usage.py  mcp_summarizer_demo.py  mcp_ticket_demo.py  memory_format_examples.md  todo_hijacker_demo.py  todo_prefix_hook_example.py  todo_prefix_hook_integration.py
final_verification/: output.txt
kuzu-memories/: README.md  project_info.md
npm-bin/: claude-mpm.js
plugin/: LICENSE  README.md
scripts/: AGENT_MANAGEMENT_TUI_GUIDE.md  MCP_CONFIG_TOOLS.md  README-push-to-agents-repo.md  README.md  README_CONFIGURE.md  README_MAMBA.md  README_MIGRATE_AGENTS_V5.md  SKILLS_SCRIPTS_README.md  TUI_NAVIGATION_FIX.md  TUI_NAVIGATION_FIX_SUMMARY.md  TUI_TESTING.md  VERSION_BUMP_SUMMARY.md  add_semantic_state_intelligence.py  add_skills_to_agents.py  add_task_decomposition.py  agent_template_optimization_report.md  aggregate_agent_dependencies.py  analysis_script.py  analyze_hook_structure.py  apply_deprecation_policy.py  apply_optimizations.py  automated_release.py  balanced_optimize.py  batch_update_agent_metadata.py  build-dashboard.sh  build-svelte-dashboard.sh  bump_agent_versions.py  check_clean_workspace.sh  check_dashboard_hook_events.py  check_filtered_agents.py  check_mcp_processes.py  check_monitor_deps.py  check_pm_instructions_changed.sh  check_tui.py  check_version_consistency.py  check_watchdog_control.py  claude-mpm  claude-mpm-dev  claude-mpm-mamba  claude-mpm-socketio  (+358 more)
test-results/: .last-run.json  socket-io-verification-report.md
test_package/: __init__.py
test_results/: dashboard_stability_summary_1756167315.txt
tests/: SKIP_test_misc.py  TEST_SUITE_SUMMARY.md  TODO_MEMORY_TESTS.md  __init__.py  _test_utils.py  agent_best_practices_report.md  calculator.py  code_logic_validation_report.json  comprehensive_duplicate_test.py  conftest.py  dashboard_qa_comprehensive_report.json  data_engineer_event_test.py  demo_socketio_management_fixes.py  diagnostic_connection_auth_test.py  diagnostic_end_to_end_test.py  diagnostic_hook_handler_test.py  examples.py  factorial.py  final_integration_test.py  git_branch_console_error_qa_results.json  greeting.py  hello.py  hello_world.py  manual_interactive_response_test.sh  manual_test_real_repo.py  manual_viewer_improvements_qa_guide.md  memory_demo.py  memory_system_test.py  qa_dashboard_comprehensive_test.py  qa_dashboard_manual_test.py  qa_dashboard_socketio_test.py  quick_dashboard_test.py  quick_test.py  research_agent_regression_tests.py  run_comprehensive_test_suite.py  send_test_event.py  simple_agent_test.py  simple_socket_test.py  simple_socketio_test.py  test-dashboard-fix.html  (+649 more)
tickets/: TICKET_193_SUMMARY.md
todos/: sync_1  sync_3
tools/: README.md  measure_duplication_reduction.py
(+7727 files in other folders)
