[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "claude-mpm"
version = "6.5.11"
description = "Claude Code workflow and agent management framework - Multi-agent orchestration, skills system, MCP integration, session management, and semantic code search for AI-powered development"
readme = "README.md"
requires-python = ">=3.13"
keywords = [ "claude", "claude-code", "anthropic", "ai-agents", "multi-agent", "workflow-automation", "agent-orchestration", "developer-tools", "cli-tools", "mcp", "model-context-protocol", "skills-system", "session-management", "semantic-search", "code-search", "google-workspace", "gmail-api", "google-calendar", "google-drive", "google-tasks", "github-integration", "ticket-management", "ai-development", "code-generation", "devops", "automation",]
classifiers = [ "Development Status :: 6 - Mature", "Environment :: Console", "Framework :: AsyncIO", "Intended Audience :: Developers", "Intended Audience :: Information Technology", "License :: Other/Proprietary License", "Operating System :: MacOS", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.13", "Topic :: Software Development", "Topic :: Software Development :: Build Tools", "Topic :: Software Development :: Code Generators", "Topic :: Software Development :: Libraries :: Application Frameworks", "Topic :: Software Development :: Quality Assurance", "Topic :: Software Development :: Testing", "Topic :: System :: Software Distribution", "Typing :: Typed",]
dependencies = [ "ai-trackdown-pytools>=1.4.0", "pyyaml>=6.0", "python-dotenv>=1.0.0", "click>=8.0.0", "pexpect>=4.8.0", "psutil>=5.9.0", "requests>=2.25.0", "flask>=3.0.0", "flask-cors>=4.0.0", "watchdog>=3.0.0", "python-socketio>=5.14.0", "aiohttp>=3.9.0", "aiohttp-cors>=0.7.0,<0.8.0", "python-engineio>=4.8.0", "aiofiles>=23.0.0", "websockets>=12.0", "python-frontmatter>=1.0.0", "mistune>=3.0.0", "tree-sitter>=0.21.0", "ijson>=3.2.0", "toml>=0.10.2", "packaging>=21.0", "pydantic>=2.0.0", "pydantic-settings>=2.0.0", "rich>=13.0.0", "questionary>=2.0.0", "pyee>=13.0.0", "pathspec>=0.11.0", "fastapi>=0.100.0", "uvicorn>=0.20.0", "httpx>=0.24.0", "keyring>=24.0.0", "cryptography>=41.0.0", "mcp>=1.0.0", "huey>=2.5.0", "commitizen>=4.13.9",]
[[project.authors]]
name = "Bob Matsuoka"
email = "bob@matsuoka.com"

[[project.maintainers]]
name = "Claude MPM Team"

[dependency-groups]
dev = [ "deepeval>=1.0.0", "pytest>=7.0", "pytest-asyncio", "pytest-cov", "ruff>=0.8.0", "mypy>=1.0.0", "types-PyYAML>=6.0.0", "types-requests>=2.25.0", "pytest-xdist>=3.8.0", "playwright>=1.40.0", "pytest-timeout>=2.4.0", "commitizen>=4.13.9",]

[project.license]
text = "Elastic-2.0"

[project.urls]
Homepage = "https://github.com/bobmatnyc/claude-mpm"
Repository = "https://github.com/bobmatnyc/claude-mpm.git"
Issues = "https://github.com/bobmatnyc/claude-mpm/issues"
Documentation = "https://github.com/bobmatnyc/claude-mpm/blob/main/README.md"

[project.optional-dependencies]
mcp = [ "mcp>=0.1.0", "mcp-vector-search>=0.1.0", "mcp-browser>=0.1.0", "mcp-ticketer>=0.1.0",]
dev = [ "pytest>=7.0", "pytest-asyncio", "pytest-cov", "ruff>=0.8.0", "pylint>=3.0.0", "pre-commit", "mypy>=1.0.0", "types-PyYAML>=6.0.0", "types-requests>=2.25.0",]
eval = [ "anthropic>=0.40.0", "deepeval>=1.0.0", "pytest>=7.4.0", "pytest-asyncio>=0.21.0", "pytest-timeout>=2.1.0",]
docs = [ "sphinx>=7.2.0", "sphinx-rtd-theme>=1.3.0", "sphinx-autobuild>=2021.3.14",]
monitor = [ "python-socketio>=5.14.0", "aiohttp>=3.9.0", "aiohttp-cors>=0.7.0,<0.8.0", "python-engineio>=4.8.0", "aiofiles>=23.0.0", "websockets>=12.0",]
data-processing = [ "pandas>=2.1.0", "openpyxl>=3.1.0", "xlsxwriter>=3.1.0", "numpy>=1.24.0", "pyarrow>=14.0.0", "dask>=2023.12.0", "polars>=0.19.0", "xlrd>=2.0.0", "xlwt>=1.3.0", "csvkit>=1.3.0", "tabulate>=0.9.0", "python-dateutil>=2.8.0", "lxml>=4.9.0", "sqlalchemy>=2.0.0", "psycopg2-binary>=2.9.0", "pymongo>=4.5.0", "redis>=5.0.0", "beautifulsoup4>=4.12.0", "jsonschema>=4.19.0",]
memory = [ "kuzu-memory>=1.1.5",]
slack = [ "slack-bolt>=1.18.0", "slack-sdk>=3.23.0",]
http = [ "starlette>=0.38.0", "sse-starlette>=2.0.0", "pyngrok>=7.0.0",]
sdk = [ "claude-agent-sdk>=0.1.48",]
telegram = [ "python-telegram-bot>=20.0",]
google = []
llmlingua = [ "llmlingua>=0.2.0",]
contracts = [ "icontract>=2.6.0", "icontract-hypothesis>=0.1.0",]

[project.scripts]
claude-mpm = "claude_mpm.cli:main"
claude-hook = "claude_mpm.hooks.claude_hooks.hook_handler:main"
claude-mpm-doctor = "claude_mpm.scripts.mpm_doctor:main"
claude-mpm-serve = "claude_mpm.services.ui_service.main:main"
commit-cost-hook = "claude_mpm.hooks.commit_cost_tracker:run_as_git_hook"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [ ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "venv", "*.egg-info", ".pytest_cache", "_archive", "tools",]

[tool.pylint]
max-line-length = 88
disable = [ "C0111", "C0103", "R0903", "R0913", "W0212",]
enable = [ "duplicate-code", "reimported", "import-self", "cyclic-import", "wrong-import-order", "ungrouped-imports", "wrong-import-position",]
min-similarity-lines = 4
ignore-comments = true
ignore-docstrings = true
ignore-imports = false

[tool.commitizen]
name = "cz_conventional_commits"
version = "6.5.11"
version_files = [ "VERSION", "src/claude_mpm/VERSION", "package.json:version", "pyproject.toml:version",]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true

[tool.ruff.lint]
select = [ "E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "PTH", "RUF",]
ignore = [ "E501", "E203", "B008", "B905", "RUF005", "RUF043", "RUF059", "PTH123", "PTH100", "PTH109", "PTH110", "PTH111", "PTH118", "PTH120", "DTZ003", "DTZ005", "DTZ006", "DTZ007", "C401", "PLW0108", "UP046", "UP049",]
fixable = [ "ALL",]
unfixable = [ "RUF043", "RUF059",]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools.package-data]
claude_mpm = [ "VERSION", "BUILD_NUMBER", "scripts/*", "scripts/*.sh", "scripts/setup/*", "scripts/setup/*.sh", "commands/*.md", "config/*.yaml", "skills/bundled/**/*.md", "dashboard/*.html", "dashboard/templates/*.html", "dashboard/static/*.css", "dashboard/static/*.js", "dashboard/static/css/*.css", "dashboard/static/js/*.js", "dashboard/static/js/components/*.js", "dashboard/static/svelte-build/**/*", "agents/*.md", "agents/*.json", "agents/*.yaml", "agents/templates/*.json", "agents/templates/*.md", "agents/schema/*.json", "hooks/**/*.py", "hooks/**/*.sh", "hooks/claude_hooks/*", "hooks/claude_hooks/**/*", "templates/*.yaml", "templates/.pre-commit-config.yaml", "templates/claude/**/*", "templates/claude/hooks/scripts/*.sh", "templates/claude/commands/*.md", "bin/ztk", "bin/ztk_LICENSE",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = [ "test_*.py", "*_test.py",]
python_classes = [ "Test*",]
python_functions = [ "test_*",]
addopts = [ "--tb=short", "--strict-markers", "--disable-warnings", "--timeout=120", "--timeout-method=thread",]
markers = [ "unit: Unit tests", "integration: Integration tests", "live_eval: Live eval tests requiring ANTHROPIC_API_KEY and PM_EVAL_LIVE=1", "tmux_eval: Tmux-based eval tests requiring PM_EVAL_TMUX=1 and mpm-eval tmux session", "smoke: Fast structural tests (no external services)", "e2e: End-to-end tests", "regression: Regression tests", "socketio: Socket.IO related tests", "hook: Hook system tests", "serial: Mark tests that must run serially (not parallelized)", "behavioral: PM behavioral compliance tests", "delegation: Delegation behavior tests", "tools: Tool usage behavior tests", "circuit_breaker: Circuit breaker compliance tests", "workflow: Workflow behavior tests", "evidence: Evidence-based assertion tests", "file_tracking: File tracking behavior tests", "memory: Memory management behavior tests", "performance: Performance benchmarking tests", "critical: Critical severity tests", "high: High severity tests", "medium: Medium severity tests", "low: Low severity tests",]
asyncio_mode = "auto"
norecursedirs = [ "archive", "benchmarks", "manual", "stress", ".*", "_*",]

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = false
lines-after-imports = 2
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [ "F401", "F403",]
"tests/**/*.py" = [ "F403", "F405", "C401", "ARG", "S101",]
"src/claude_mpm/cli/interactive/skills_wizard.py" = [ "RUF005",]
"src/claude_mpm/skills/skill_manager.py" = [ "PTH123",]

[tool.setuptools.packages.find]
where = [ "src",]

[tool.setuptools.dynamic.version]
file = "VERSION"
